change micropub anchor in FAQ

--- a/views/accountPage.twig
+++ b/views/accountPage.twig
@@ -81,7 +81,7 @@
             Here you can generate and review credential bearer tokens. They can
             be used by services like
             <a href="https://indiewebcamp.com/micropub">micropub</a> to validate
-            posts to your <a href="faq#micropub">micropub endpoint</a>.
+            posts to your <a href="faq#Micropub">micropub endpoint</a>.
         </p>
 
         {% if credential %}
