--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -176,7 +176,7 @@ $ openssl x509 -in client.crt -outform DER \
             ideal for testing while developing your relying party!
         </p>
 
-        <h3 id="micropub">Micropub</h3>
+        <h3 id="#Micropub">Micropub</h3>
         <p>
             If you have your own domain and run a
             <a href="https://indiewebcamp.com/micropub">micropub</a> service,
