--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -176,20 +176,20 @@ $ openssl x509 -in client.crt -outform DER \
             ideal for testing while developing your relying party!
         </p>
 
-        <h3 id="#Micropub">Micropub</h3>
+        <h3 id="Micropub">Micropub</h3>
         <p>
             If you have your own domain and run a
             <a href="https://indiewebcamp.com/micropub">micropub</a> service,
             you need to use a credential generated on your
             <a href="account#credentials">account</a> page. The token is used to
             authenticate to the <a href="https://tools.ietf.org/html/draft-ietf-oauth-introspection">introspection</a> endpoint available
-            at <code>{{ token_endpoint|e }}</code>. For example:
+            at <code>{{ introspect_endpoint|e }}</code>. For example:
         </p>
 <pre>
 $ curl \
     -H "Authorization: Bearer 5f361f597d465578c245e816778fa059" \
     -d "token=37ab6853eaf6116e9216b31e40dbd3b6" \
-    {{ token_endpoint|e }}
+    {{ introspect_endpoint|e }}
 </pre>
 
         <p>
