update fkooman/rest and other dependencies and fix code

--- a/views/indexPage.twig
+++ b/views/indexPage.twig
@@ -42,7 +42,7 @@
             over HTTPS!
         </p>
 
-        <form class="authenticate" method="post" action="indieauth/auth">
+        <form class="authenticate" method="post" action="_indieauth/auth">
             <label for="me">https://</label><input id="me" required type="text" name="me" placeholder="example.org">
             <input type="hidden" name="redirect_to" value="/account">
             <input class="info" type="submit" value="Sign In">
