--- a/views/accountPage.twig
+++ b/views/accountPage.twig
@@ -10,7 +10,7 @@
             Welcome to your account page! Your identity is <code>{{ me|e }}</code>.
         </p>
 
-        <form method="post" action="indieauth/logout">
+        <form method="post" action="_indieauth/logout">
             <input type="submit" value="Logout">
         </form>
 
