--- a/views/indexPage.twig
+++ b/views/indexPage.twig
@@ -39,7 +39,7 @@
             You will be guided through generating a client certificate if you don't already
             have one and adding the fingerprint to your home page. Please enter a domain
             name or URL to a page you can modify. It <strong>MUST</strong> be reachable
-            over HTTPS!
+            over HTTPS! Check the <a href="faq#GitHub">FAQ</a> to get started using GitHub pages.
         </p>
 
         <form class="authenticate" method="post" action="_indieauth/auth">
