--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -211,7 +211,7 @@ Now try to login to IndieCert using the identity
 <code>https://fkooman.github.io/</code>. Where you replace <code>fkooman</code>
 with your own GitHub account name. The authentication will fail because the
 fingerprint does not yet match. Replace <code>{fingerprint}</code> with the
-fingerprint mentioned on the IndieCert page. After saving this the
+fingerprint mentioned when you try to login. After saving this, the
 authentication should work! You can use the identity mentioned above to
 authenticate to Distributed IndieAuth applications!
         </p>
