--- a/views/noCert.twig
+++ b/views/noCert.twig
@@ -12,7 +12,7 @@
         </p>
 
         <p>
-            If you want you can generate a new client certificate <a href="enroll">here</a>!
+            If you want you can generate a new client certificate <a href="enroll?me={{ me|e }}">here</a>!
             Follow the instructions provided there to get going. If you already have a
             client certificate restart your browser<span class="sup">1</span> and
             try again!
