remove html comments

--- a/views/indexPage.twig
+++ b/views/indexPage.twig
@@ -12,71 +12,19 @@
 
         <p>
             IndieCert is a service to authenticate to services around the web using your
-            home page URL as an identity without requiring a password, but by using secure
+            home page URL as an identity without requiring a password by using secure
             client certificates! Check out the <a href="faq">FAQ</a> for more details!
             <a href="faq#supportedServices">Here</a> is a list of supported services.
         </p>
 
         <h2>Try It!</h2>
-<!--        <p>-->
-<!--            You will be guided through generating a client certificate if you don't already-->
-<!--            have one and adding the fingerprint to your home page. Please enter a domain-->
-<!--            name or URL to a page you can modify. It <strong>MUST</strong> be reachable-->
-<!--            over HTTPS! Check the <a href="faq#GitHub">FAQ</a> to get started using GitHub pages.-->
-<!--        </p>-->
+        <p>Provide your home page URL you want to use as your identity:</p>
 
         <form class="authenticate" method="post" action="_indieauth/auth">
             <label for="me">https://</label><input id="me" required type="text" name="me" placeholder="example.org">
             <input type="hidden" name="redirect_to" value="/account">
             <input class="info" type="submit" value="Sign In">
         </form>
-<!--
-        <p>
-            IndieCert uses
-            client certificates installed in the user's browser. Client certificates
-            provide superior security. Until now it has been cumbersome to deploy client
-            certificates outside managed corporate environments. This service, or your
-            instance of it, improves on this by making it easier to deploy client
-            certificates and support multiple (mobile) devices.
-        </p> -->
-<!--        <p class="info">
-            IndieCert aims to be compatible with the
-            (<a href="https://indiewebcamp.com/distributed-indieauth">distributed</a>)
-            <a href="https://indieauth.com">IndieAuth</a> protocol.
-        </p> -->
-
-<!--        <p class="info">
-            You can check out the <a href="faq">Frequently Asked Questions</a>!
-        </p> -->
-
-<!--        <p>
-            All <a href="https://github.com/fkooman/indiecert">code</a> is available under
-            the <a href="https://gnu.org/licenses/agpl.html">AGPLv3</a> license. There are
-            also Docker
-            <a href="https://github.com/fkooman/indiecert/tree/master/docker">instructions</a>
-            for easily running your own instance!
-        </p> -->
-<!--
-        <h2>Try It!</h2>
-        <p>
-            You will be guided through generating a client certificate if you don't already
-            have one and adding the fingerprint to your home page. Please enter a domain
-            name or URL to a page you can modify. It <strong>MUST</strong> be reachable
-            over HTTPS! Check the <a href="faq#GitHub">FAQ</a> to get started using GitHub pages.
-        </p>
-
-        <form class="authenticate" method="post" action="_indieauth/auth">
-            <label for="me">https://</label><input id="me" required type="text" name="me" placeholder="example.org">
-            <input type="hidden" name="redirect_to" value="/account">
-            <input class="info" type="submit" value="Sign In">
-        </form>
--->
-<!--
-        <h2>Relying Party?</h2>
-        <p>
-            Check out the relying party <a href="rp">instructions</a>!
-        </p>
--->
         {% include 'footer.html' %}
     </div> <!-- /container -->
 </body>
