remove the label https for sign in that never wanted to align...

--- a/views/loginPage.twig
+++ b/views/loginPage.twig
@@ -14,11 +14,11 @@
         {% endif %}
 
         <p>
-            Please login with your domain name.
+            Please provide your domain name.
         </p>
 
         <form class="authenticate" method="post" action="_indieauth/auth">
-            <label for="me">https://</label><input id="me" required type="text" name="me" placeholder="example.org">
+            <input required type="text" name="me" placeholder="yourdomain.com">
             <input type="hidden" name="redirect_to" value="{{ redirect_to|e }}">
             <input class="info" type="submit" value="Sign In">
         </form>
