--- a/views/indexPage.twig
+++ b/views/indexPage.twig
@@ -18,10 +18,12 @@
         </p>
 
         <h2>Try It!</h2>
-        <p>Provide your home page URL you want to use as your identity:</p>
+        <p>
+            Please provide your domain name.
+        </p>
 
         <form class="authenticate" method="post" action="_indieauth/auth">
-            <label for="me">https://</label><input id="me" required type="text" name="me" placeholder="example.org">
+            <input required type="text" name="me" placeholder="yourdomain.com">
             <input type="hidden" name="redirect_to" value="/account">
             <input class="info" type="submit" value="Sign In">
         </form>
