make clear that using GH pages is for testing only, issue #19

--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -164,7 +164,7 @@ $ openssl x509 -in client.crt -outform DER \
         <h3 id="GitHub">Using GitHub Pages instead of your own domain</h3>
         <p>
 Not everyone will have their own domain and valid TLS certificate configured
-for it. So for testing it makes sense to use GitHub pages!
+for it. So for <strong>testing only</strong> it makes sense to use GitHub pages!
         </p>
 
         <p>
