autofocus on submit button on ask confirmation dialog

--- a/views/askConfirmation.twig
+++ b/views/askConfirmation.twig
@@ -19,7 +19,7 @@
         <form class="askConfirmation" method="post" action="{{ confirmUri|e }}">
             <input type="checkbox" id="remember" name="remember" />
             <label class="remember" for="remember">Remember for 1 week</label>
-            <input class="info" type="submit" value="Approve">
+            <input class="info" type="submit" value="Approve" autofocus>
         </form>
 
         {% include 'footer.html' %}
