- rename the init scripts - update dependencies to latest version - introduce `serverMode` to allow for production or development configuration

--- a/views/loginPage.twig
+++ b/views/loginPage.twig
@@ -17,7 +17,7 @@
             Please provide your domain name.
         </p>
 
-        <form class="authenticate" method="post" action="_indieauth/auth">
+        <form class="authenticate" method="post" action="_auth/indieauth/auth">
             <input required type="text" name="me" placeholder="yourdomain.com">
             <input type="hidden" name="redirect_to" value="{{ redirect_to|e }}">
             <input class="info" type="submit" value="Sign In">
