--- a/views/indexPage.twig
+++ b/views/indexPage.twig
@@ -22,9 +22,9 @@
             Please provide your domain name.
         </p>
 
-        <form class="authenticate" method="post" action="_indieauth/auth">
+        <form class="authenticate" method="post" action="{{ rootUrl|e }}_auth/indieauth/auth">
             <input required type="text" name="me" placeholder="yourdomain.com">
-            <input type="hidden" name="redirect_to" value="/account">
+            <input type="hidden" name="redirect_to" value="http://localhost:8080/account">
             <input class="info" type="submit" value="Sign In">
         </form>
         {% include 'footer.html' %}
