--- a/views/indexPage.twig
+++ b/views/indexPage.twig
@@ -24,7 +24,7 @@
 
         <form class="authenticate" method="post" action="{{ rootUrl|e }}_auth/indieauth/auth">
             <input required type="text" name="me" placeholder="yourdomain.com">
-            <input type="hidden" name="redirect_to" value="http://localhost:8080/account">
+            <input type="hidden" name="redirect_to" value="{{ rootUrl|e }}account">
             <input class="info" type="submit" value="Sign In">
         </form>
         {% include 'footer.html' %}
