--- a/views/indexPage.twig
+++ b/views/indexPage.twig
@@ -1,33 +1,22 @@
 <!DOCTYPE html>
 
 <html lang="en">
-{% include 'head.html' %}
+{% include 'head.twig' %}
 <body>
-    <div id="container">
-        <a class="header" href="."><h1>IndieCert</h1></a>
+    {% include 'header.twig' %}
 
-        <p class="warn">
-            This is an <strong>EXPERIMENTAL</strong> service. No warranty!
-        </p>
+    <p class="warning">
+        This is an <strong>EXPERIMENTAL</strong> service. No warranty!
+    </p>
 
-        <p>
-            IndieCert is a service to authenticate to services around the web using your
-            home page URL as an identity without requiring a password by using secure
-            client certificates! Check out the <a href="faq">FAQ</a> for more details!
-            <a href="faq#supportedServices">Here</a> is a list of supported services.
-        </p>
+    <p>
+        IndieCert is a service to authenticate to services around the web using your
+        home page URL as an identity without requiring a password by using secure
+        client certificates!
+    </p>
 
-        <h2>Try It!</h2>
-        <p>
-            Please provide your domain name.
-        </p>
+    <button>Try Me!</button>
 
-        <form class="authenticate" method="post" action="{{ rootUrl|e }}_auth/indieauth/auth">
-            <input required type="text" name="me" placeholder="yourdomain.com">
-            <input type="hidden" name="redirect_to" value="{{ rootUrl|e }}account">
-            <input class="info" type="submit" value="Sign In">
-        </form>
-        {% include 'footer.html' %}
-    </div> <!-- /container -->
+    {% include 'footer.twig' %}
 </body>
 </html>
