cleanup the templates a bit, add more text

--- a/views/indexPage.twig
+++ b/views/indexPage.twig
@@ -14,8 +14,11 @@
         home page URL as an identity without requiring a password by using secure
         client certificates!
     </p>
-
-    <button>Try Me!</button>
+    <p>
+        This service is compatible with 
+        <a href="https://indieauth.com">IndieAuth</a> and you can use this
+        service as your <a href="https://indiewebcamp.com/distributed-indieauth">preferred</a> identity provider.
+    </p>
 
     {% include 'footer.twig' %}
 </body>
