--- a/views/noCert.twig
+++ b/views/noCert.twig
@@ -14,14 +14,14 @@
     <p>
         If you want you can generate a new client certificate <a href="#">here</a>!
         Follow the instructions provided there to get going. If you already have a
-        client certificate restart your browser (1) and
+        client certificate restart your browser<sup>1</sup> and
         try again!
     </p>
 
-    <ol>
+    <ol class="footnote">
         <li>
 Some browser will require you to restart, or use "Private Browsing" 
-to forget that you did not want to authenticate to a site using a client certificate...
+to forget that you did not want to authenticate to a site using a client certificate.
         </li>
     </ol>
 
