--- a/views/noCert.twig
+++ b/views/noCert.twig
@@ -8,15 +8,21 @@
     <p class="warning">
         You reached this page because you do not yet have a client certificate
         installed in your browser/operating system or declined to authenticate with it
-        to IndieCert.
+        to IndieCert<sup>1</sup>.
     </p>
 
-    <p>
-        If you want you can generate a new client certificate <a href="#">here</a>!
-        Follow the instructions provided there to get going. If you already have a
-        client certificate restart your browser<sup>1</sup> and
-        try again!
-    </p>
+    {% if enrollUrl %}
+        <p>
+            If you want you can generate a new client certificate! 
+        </p>
+
+        <form method="get" action="{{ enrollUrl|e }}">
+            <fieldset>
+                <legend>Enroll</legend>
+                <button type="submit">Enroll</button>
+            </fieldset>
+        </form>
+    {% endif %}
 
     <ol class="footnote">
         <li>
