restore the FAQ, make the screen a little less wide by default

--- a/views/indexPage.twig
+++ b/views/indexPage.twig
@@ -19,6 +19,9 @@
         <a href="https://indieauth.com">IndieAuth</a> and you can use this
         service as your <a href="https://indiewebcamp.com/distributed-indieauth">preferred</a> identity provider.
     </p>
+    <p>
+        Also check out the <a href="faq">FAQ</a>!
+    </p>
 
     {% include 'footer.twig' %}
 </body>
