--- a/views/indexPage.twig
+++ b/views/indexPage.twig
@@ -5,22 +5,21 @@
 <body>
     {% include 'header.twig' %}
 
-    <p class="warning">
-        This is an <strong>EXPERIMENTAL</strong> service. No warranty!
-    </p>
+    <ul class="mainMenu">
+        <li class="active"><a href="{{ root|e }}">Home</a></li>
+        <li><a href="enroll">Enrollment</a></li>
+        <li><a href="faq">FAQ</a></li>
+    </ul>
+
+    <h2>Home</h2>
 
     <p>
-        IndieCert is a service to authenticate to services around the web using your
-        home page URL as an identity without requiring a password by using secure
-        client certificates!
+        IndieCert is an <a href="https://indieauth.com/">IndieAuth</a>-compatible service for authenticating using
+        client certificates. Check out the <a href="faq">FAQ</a> to find out more!
     </p>
-    <p>
-        This service is compatible with 
-        <a href="https://indieauth.com">IndieAuth</a> and you can use this
-        service as your <a href="https://indiewebcamp.com/distributed-indieauth">preferred</a> identity provider.
-    </p>
-    <p>
-        Also check out the <a href="faq">FAQ</a>!
+
+    <p class="info">
+        To simply get started, continue to the <a href="{{ demoUrl|e }}">Demo</a>!
     </p>
 
     {% include 'footer.twig' %}
