--- a/web/css/screen.css
+++ b/web/css/screen.css
@@ -1,230 +1,106 @@
 body {
-    max-width: 40em;
     margin: 0 auto;
+    max-width: 40em;
+    font-family: sans-serif;
     color: #444;
     padding: 0.5em;
-}
-
-body, button, input {
-    font-family: sans-serif;
-}
-
-button, input, code, body {
-    line-height: 1.5;
-    font-size: 100%;
-}
-
-h1, h2, h3, h4 {
-    margin: 0;
-    padding: 0.5em 0;
-}
-
-.text-right {
-    text-align: right;
+    text-align: justify;
+    line-height: 1.4;
 }
 
 a {
-    color: #257;
+    color: #444;
 }
 
-p {
-    margin-top: 0;
-}
-
-p.danger {
-    background-color: #d54;
-    padding: 1em;
-    color: #fff;
-    border-radius: 0.2em;
-}
-
-p.danger a {
-    color: #fff;
-}
-
-p.plain {
-    background-color: #eee;
-    padding: 1em;
-    border-radius: 0.2em;
-}
-
-p.warning {
-    background-color: #e91;
-    padding: 1em;
-    border-radius: 0.2em;
-    color: #fff;
-}
-
-code {
-    color: #c24;
-    background-color: #eee;
-    padding: 0 0.3em;
-}
-
-ul {
+ul.mainMenu {
     margin: 0;
     padding: 0;
 }
 
-/** Info **/
-dl {
-    margin: 0;
-}
-
-dt {
-    font-weight: bold;
-}
-
-/** IP LIST **/
-ul.ipList li {
-    list-style: none;
-}
-    
-/** MENU **/
 ul.mainMenu li {
+    display: inline-block;
     list-style: none;
     margin: 0;
-    display: inline-block;
+    padding: 0.75em;
 }
 
-ul.mainMenu li a {
+ul.mainMenu a {
+    color: #444;
     padding: 0.7em;
-    line-height: 2.5;
     text-decoration: none;
 }
 
 ul.mainMenu li.active {
-    border-radius: 0.2em;
-    background-color: #37b;
+    background-color: #f0f0f0;
 }
 
-ul.mainMenu li:hover {
-    border-radius: 0.2em;
-    background-color: #eee;
+hr {
+    display: none;
 }
 
-ul.mainMenu li.active:hover {
-    border-radius: 0.2em;
-    background-color: #26a;
-}
-
-ul.mainMenu li.active a {
-    color: #fff;
-}
-
-/** FORM **/
-form.inline {
-    display: inline;
+p.footer {
+    text-align: center;
+    font-size: 80%;
+    color: #888;
 }
 
 fieldset {
-    border: 0;
-    margin: 1em 0;
-    padding: 0;
+    border: 0px solid #000;
 }
 
 legend {
     display: none;
 }
 
-label {
-    font-weight: bold;
-    margin: 0 0 0.2em 0;
-    display: block;
+form.enroll {
+    background-color: #f8f8f8;
 }
 
-input[type="text"], input[type="checkbox"], input[type="date"] {
-    margin: 0;
-    padding: 0.5em 0.7em;
-    border: 1px solid #ddd;
-    border-radius: 0.2em;
-    display: inline-block;
+label {
+    margin-top: 1em;
+    display: block;
+    font-size: 85%;
 }
 
 button {
-    border-radius: 0.2em;
-    background-color: #37b;
-    padding: 0.5em 0.7em;
-    border: 0;
+    margin-top: 1em;
+    display: block;
+}
+
+p.info {
+    background-color: #093;
+    color: #fff;
+    padding: 1em;
+}
+
+p.info a {
     color: #fff;
 }
 
-button:hover {
-    background-color: #26a;
-    cursor: pointer;
+p.warning {
+    background-color: #fc2;
+    padding: 1em;
 }
 
-button.danger {
-    background-color: #c00;
+dl {
+    font-weight: bold;
 }
 
-button.danger:hover {
-    background-color: #b00;
+code, pre {
+    background-color: #efefef;
+    color: #c00;
+    padding: 0 0.4em;
 }
 
-button.warning {
-    background-color: #e91;
+pre {
+    padding: 0.4em;
 }
 
-button.warning:hover {
-    background-color: #d80;
-}
-
-button.success {
-    background-color: #494;
-}
-
-button.success:hover {
-    background-color: #383;
-}
-
-span.help {
-    display: block;
-    color: #888;
-    margin: 0.2em 0 1em 1em;
-    padding: 0;
-    font-size: 85%;
-}
-
-/** TABLE **/
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-td, th {
-    padding: 0.5em;
-    text-align: left;
-    vertical-align: top;
-}
-
-tr:nth-child(even) {
-    background-color: #f8f8f8;
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-}
-
-th {
-    border-bottom: 2px solid #ddd;
-}
-
-/** FOOTNOTES **/
-ol.footnote {
-    font-size: 85%;
-    color: #888;
-}
-
-/** FOOTER **/   
-hr { 
-    border: 0; 
-}
-
-p.footer {
-    text-align: center;
-    font-size: 85%;
-    color: #888;
-}
-
-p.footer a {
-    color: #888;
+button {
+    padding: 0.4em;
+    line-height: 1.4;
+    font-size: 100%;
+    border: 0;
+    background-color: #093;
+    color: #fff;
 }
