--- a/web/css/screen.css
+++ b/web/css/screen.css
@@ -1,92 +1,233 @@
 body {
-    margin: 0 auto;
     max-width: 40em;
-    font-family: sans-serif;
+    margin: 0 auto;
     color: #444;
     padding: 0.5em;
-    text-align: justify;
-    line-height: 1.4;
+}
+
+body, button, input {
+    font-family: sans-serif;
+}
+
+button, input, code, body {
+    line-height: 1.5;
+    font-size: 100%;
+}
+
+h1, h2, h3, h4 {
+    margin: 0;
+    padding: 0.5em 0;
+}
+
+.text-right {
+    text-align: right;
 }
 
 a {
-    color: #444;
+    color: #257;
 }
 
-code, pre {
-  font-family: monospace, monospace;
-  font-size: 1em;
+p {
+    margin-top: 0;
 }
 
+p.danger {
+    background-color: #d54;
+    padding: 1em;
+    color: #fff;
+    border-radius: 0.2em;
+}
+
+p.danger a {
+    color: #fff;
+}
+
+p.plain {
+    background-color: #eee;
+    padding: 1em;
+    border-radius: 0.2em;
+}
+
+code {
+    color: #c24;
+    background-color: #eee;
+    padding: 0 0.3em;
+    font-family: monospace, monospace;
+    font-size: 1em;
+}
+
+/** Info **/
+dl {
+    margin: 0;
+}
+
+dt {
+    font-weight: bold;
+}
+
+/** IP LIST **/
+ul.ipList {
+    margin: 0;
+    padding: 0;
+}
+
+ul.ipList li {
+    list-style: none;
+}
+    
+/** MENU **/
 ul.mainMenu {
     margin: 0;
     padding: 0;
 }
 
 ul.mainMenu li {
-    display: inline-block;
     list-style: none;
     margin: 0;
-    padding: 0.75em;
+    display: inline-block;
 }
 
-ul.mainMenu a {
-    color: #444;
+ul.mainMenu li a {
     padding: 0.7em;
+    line-height: 2.5;
     text-decoration: none;
 }
 
 ul.mainMenu li.active {
-    background-color: #f0f0f0;
+    border-radius: 0.2em;
+    background-color: #37b;
 }
 
-hr {
-    display: none;
+ul.mainMenu li:hover {
+    border-radius: 0.2em;
+    background-color: #eee;
 }
 
-p.footer {
-    text-align: center;
-    font-size: 80%;
-    color: #888;
+ul.mainMenu li.active:hover {
+    border-radius: 0.2em;
+    background-color: #26a;
+}
+
+ul.mainMenu li.active a {
+    color: #fff;
+}
+
+/** FORM **/
+form.inline {
+    display: inline;
 }
 
 fieldset {
-    border: 0px solid #000;
+    border: 0;
+    margin: 1em 0;
+    padding: 0;
 }
 
 legend {
     display: none;
 }
 
-form.enroll {
-    background-color: #f8f8f8;
+label {
+    font-weight: bold;
+    margin: 0 0 0.2em 0;
+    display: block;
 }
 
-label {
-    margin-top: 1em;
-    display: block;
-    font-size: 85%;
+input[type="text"], input[type="checkbox"] {
+    margin: 0;
+    padding: 0.5em 0.7em;
+    border: 1px solid #ddd;
+    border-radius: 0.2em;
+    display: inline-block;
 }
 
 button {
-    margin-top: 1em;
+    border-radius: 0.2em;
+    background-color: #37b;
+    padding: 0.5em 0.7em;
+    border: 0;
+    color: #fff;
+}
+
+button:hover {
+    background-color: #26a;
+    cursor: pointer;
+}
+
+button.danger {
+    background-color: #c00;
+}
+
+button.danger:hover {
+    background-color: #b00;
+}
+
+button.warning {
+    background-color: #e91;
+}
+
+button.warning:hover {
+    background-color: #d80;
+}
+
+button.success {
+    background-color: #494;
+}
+
+button.success:hover {
+    background-color: #383;
+}
+
+button.plain {
+    background-color: #eee;
+    color: #000;
+}
+
+button.plain:hover {
+    background-color: #ddd;
+}
+
+span.help {
     display: block;
+    color: #888;
+    margin: 0.2em 0 1em 1em;
+    padding: 0;
+    font-size: 85%;
 }
 
-p.info {
-    background-color: #093;
-    color: #fff;
-    padding: 1em;
+/** TABLE **/
+table {
+    width: 100%;
+    border-collapse: collapse;
 }
 
-p.info a {
-    color: #fff;
+td, th {
+    padding: 0.5em;
+    text-align: left;
+    vertical-align: top;
 }
 
-p.warning {
-    background-color: #fc2;
-    padding: 1em;
+tr:nth-child(even) {
+    background-color: #f8f8f8;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
 }
 
-dt {
-    font-weight: bold;
+th {
+    border-bottom: 2px solid #ddd;
+}
+
+/** FOOTER **/
+hr { 
+    border: 0; 
+}
+
+p.footer {
+    text-align: center;
+    font-size: 85%;
+    color: #888;
+}
+
+p.footer a {
+    color: #888;
 }
