add me parameter to enroll page request

--- a/views/noCert.twig
+++ b/views/noCert.twig
@@ -12,7 +12,7 @@
     </p>
 
     <p>
-        If you do not yet have a client certificate, you can get one <a href="enroll?redirect_to={{ requestUrl|e }}">here</a>.
+        If you do not yet have a client certificate, you can get one <a href="enroll?me={{ me|e }}&redirect_to={{ requestUrl|e }}">here</a>.
     </p>
 
     <p>
